/*
 * Copyright 2021 The Kythe Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package kythe.proto;

option go_package = "generated_message_info_go_proto";
option java_package = "com.google.devtools.kythe.proto";
option cc_enable_arenas = true;

import "google/protobuf/descriptor.proto";

message GeneratedProtoInfo {
  google.protobuf.GeneratedCodeInfo generated_code_info = 1;
}

extend google.protobuf.FileOptions {
  GeneratedProtoInfo generated_proto_info = 379882011;
}
